<resources>

    <!-- General -->
    <string name="app_name">iPost</string>
    <string name="facebook_app_id">883953245105670</string>
    <string name="fb_login_protocol_scheme">fb883953245105670</string>
    <string name="exit">Çıkmak için tekrar dokunun</string>

    <!-- ErrorTypes -->
    <string name="error_login_no_account">Error Code: 001 - We couldn\'t fetch your account information. Please check your Google account and internet connection then try again later&#8230;</string>
    <string name="error_login_fail">Error Code: 002 - An error occurred while logging in. Please check your internet connection and try again later&#8230;</string>
    <string name="error_aborted">Error Code: 002 - Process aborted by user&#8230;</string>

    <!-- LoginActivity -->
    <string name="account_created">Sign-in is successful. Your account is creating. We will start soon.&#8230;</string>

    <!-- NavigationDrawer -->
    <string name="events">Events</string>
    <string name="events_upcoming">Upcoming events</string>
    <string name="events_past">Past events</string>
    <string name="posts">Posts</string>
    <string name="posts_planned">Planned posts</string>
    <string name="posts_sent">Sent posts</string>
    <string name="other">Other</string>
    <string name="other_help">Help</string>
    <string name="other_privacy">Privacy</string>
    <string name="extras">Extras</string>
    <string name="extras_rate">Rate the app!</string>
    <string name="extras_themes">More themes</string>
    <string name="extras_feedback">Feedback</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ProfileActivity -->
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Connected accounts</string>
    <string name="title_notifications">Friends</string>
    <string name="permission_granted">Permission has been granted&#8230;</string>

    <!-- PermissionsActivity -->
    <string name="title_activity_permissions">Permissions</string>

    <!-- HelpActivity -->
    <string name="title_activity_help">Help</string>

    <!-- AboutActivity -->
    <string name="title_activity_profile_edit">Edit profile</string>
    <string name="single_activity_edit_event">Update event</string>
    <string name="single_activity_add_event">Add an event</string>
    <string name="save">Save</string>
    <string name="title_activity_themes">Themes</string>
    <string name="firstTime1">iPost is a personal assistant which replies your events for you! You can plan new event and responses to save your time.</string>
    <string name="firstTime2">To get started, please sign-in with your Google account.</string>

    <string name="good_nights">Good Night </string>
    <string name="good_morning">Good Morning </string>
    <string name="have_a_nice_day">Have A Nice Day </string>
    <string name="good_afternoon">Good Afternoon </string>
    <string name="welcome">WELCOME</string>
    <string name="permission_calendar_title">Permission: Calendar</string>
    <string name="permission_calendar_desc">iPost needs calendar permission to show, update, delete and schedule events for replying.\\n\\nAll events saved on only this device so you can be sure that no one see your informations.</string>
    <string name="permission_auth">Authorize</string>
    <string name="permission_contacts_title">Permission: Contacts</string>
    <string name="permission_contacts_desc">iPost needs to be synchroized with your contacts to create events or schedule post friends or colleagues etc.\\n\\nYour information only saved on device so accept you no one can access your data.</string>
    <string name="permission_sms_title">Permission: SMS</string>
    <string name="permission_sms_desc">iPost is personal planner. You can reply events via E-mail, Whastapp, Facebook Messenger or SMS. iSend needs SMS permission for any future usage of SMS channel to reply events.</string>
    <string name="permission_messenger_title">Permission: Messenger</string>
    <string name="permission_messenger_desc">iPost needs to be authorized with Messenger to create messenger posts.\\n\\nWe will not collect any data from your Facebook account.</string>
    <string name="single_event_section1">Event Information</string>
    <string name="single_event_name">Event name</string>
    <string name="single_event_desc">Description</string>
    <string name="single_event_loc">Location</string>
    <string name="single_event_time"><![CDATA[Date &amp; Time]]></string>
    <string name="single_event_section2">Recipients</string>
    <string name="single_event_recipients">Recipients</string>
    <string name="single_event_section3">Post Information</string>
    <string name="single_event_channels">Post channels</string>
    <string name="single_event_add_attachment">Add file</string>
    <string name="no_post">There is no post.</string>
    <string name="no_event">There is no events</string>
    <string name="event_created">Event created&#8230;</string>
    <string name="event_updated">Event updated&#8230;</string>
    <string name="event_one_time">One time</string>
    <string name="event_multiple_time">Repeat</string>
    <string name="action_required">Action requiered: Click here to send Whatsapp message.</string>
    <string name="past_time">You chose past time. Post will not be triggered.</string>
    <string name="resync_events">If you want to remove all events in iPost and retrieve them again, clcik the button below</string>
    <string name="resync_contacts">If you want to remove all contacts in iPost and retrieve them again, click the button below</string>
    <string name="accounts_info">You can see status of connected accounts here. You can change them on \'Connected accounts\'.</string>
    <string name="reset_events">Resync events</string>
    <string name="reset_contacts">Resync contacts</string>
    <string name="faq">FAQ</string>
    <string name="howto1">How to add new event?</string>
    <string name="exp1">You can add new event clicking gold circle plus button. After that, event edit page will be opened.</string>
    <string name="howto2">How can I changed the theme?</string>
    <string name="exp2">From the left menu, click the Themes button.</string>
    <string name="howto3">How to update my events?</string>
    <string name="exp3">Click your profile from opening screen. After that you will see profile page and there are two buttons on there. You can using these buttons, you can update your friends or events.</string>
    <string name="howto4">How to delete my iPost account?</string>
    <string name="exp4">Easy! Just delete app and all your datas will be removed forever! Don\'t forget, your events are stored on this device only. If you remove the app, you will lose your information permanently.</string>
    <string name="howto5">How can I see my planned and sent posts?</string>
    <string name="exp5">You can see all pending and sent post on left menu. From left menu, you can see planned and sent under posts section.</string>
    <string name="profile_calendar">Calendar</string>
    <string name="profile_contacts">Contacts</string>
    <string name="profile_accounts">Accounts</string>
    <string name="other_donate">Donate</string>
    <string name="hasSent">Sent</string>
    <string name="willSent">Planned</string>
    <string name="connected">Connected</string>
    <string name="pls_choose_time">Please choose a time</string>
</resources>
