<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/events">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_eventtoday"
                    android:icon="@drawable/ic_event_today"
                    android:title="@string/events_today" />
                <item
                    android:id="@+id/nav_eventupcoming"
                    android:icon="@drawable/ic_event_upcoming"
                    android:title="@string/events_upcoming" />
                <item
                    android:id="@+id/nav_eventpast"
                    android:icon="@drawable/ic_event_past"
                    android:title="@string/events_past" />
            </group>
        </menu>
    </item>

    <item android:title="@string/posts">
        <menu>
            <item
                android:id="@+id/nav_postplanning"
                android:icon="@drawable/ic_postplanning"
                android:title="@string/posts_planned" />
            <item
                android:id="@+id/nav_postsent"
                android:icon="@drawable/ic_postsent"
                android:title="@string/posts_sent" />
        </menu>
    </item>

</menu>